# ACP_25_Segovia

./: LICENSE  README.md  environment.yml  min_env.yml
Module_0/Project1/: CMakeLists.txt  environment.yml
Module_1/Session3/: CMakeLists.txt  README.md
Module_1/Session3/include/: CMakeLists.txt
Module_1/Session3/include/sample1_hello/: CMakeLists.txt  helloworld.c
Module_1/Session3/include/sample2_errno/: CMakeLists.txt  errnoexample.c
Module_1/Session3/include/sample3A_assertions/: CMakeLists.txt  assertexample3A.c
Module_1/Session3/include/sample3B_assertions/: CMakeLists.txt  assertexample3B.c
Module_1/Session3/include/sample4_exitflows/: CMakeLists.txt  exitflows.c
Module_1/Session4/: README.md
Module_2/pointers/: NullPointer.c  PassByReference.c  PointerArithmetic.c  PointerComparisons.c  PointerToPointer.c  Pointers.c
Session_18/: CountSetBits.c  EnumBinaryFlags.c  EnumEx_01.c  EnumEx_02.c  PrintBitsOrder.c  TypedefEx_01.c  TypedefEx_02.c  bitmult.c  bitwise.c  fullbitmult.c
pointers/: CMakeLists.txt  PassByReference.c  PassByValue.c  PointerComparisons.c  PointerToPointer.c  Pointers.c  Pointers2.c  Value&Ref.c
