# CMakeLists.txt

cmake_minimum_required(VERSION 3.10)

project(Proyect2 C)

add_executable(Pointers Pointers.c)
add_executable(PassByReference PassByReference.c)
add_executable(PassByValue PassByValue.c)
add_executable(NullPointer NullPointer.c)
add_executable(PointerArithmetic PointerArithmetic.c)
add_executable(PointerComparisons PointerComparisons.c)
add_executable(PointerToPointer PointerToPointer.c)
